--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -609,6 +609,23 @@
                     SOBRE MÍ
                 </a>
             </nav>
+            <!-- Mobile Theme Toggle -->
+            <div class="px-4 pt-2">
+                <button onclick="toggleTheme()"
+                    class="w-full flex items-center gap-3 rounded-md p-2 text-foreground/80 hover:bg-accent transition-colors">
+                    <svg class="theme-icon-sun h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <circle cx="12" cy="12" r="5" stroke-width="2" />
+                        <path stroke-linecap="round" stroke-width="2"
+                            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" />
+                    </svg>
+                    <svg class="theme-icon-moon h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        style="display:none">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" />
+                    </svg>
+                    <span class="text-sm font-medium">Cambiar tema</span>
+                </button>
+            </div>
             <div class="mt-auto p-4">
                 <div class="relative">
                     <svg class="absolute left-3 top-1/2 h-4 w-4 -translate-y-1/2 text-muted-foreground"
