--- a/comercio-exterior.html
+++ b/comercio-exterior.html
@@ -52,6 +52,7 @@
     <script>
         // Tailwind Configuration for Mobile Support
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     screens: {
