--- a/enlaces.html
+++ b/enlaces.html
@@ -52,6 +52,7 @@
     <script>
         // Tailwind Configuration for Mobile Support
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     screens: {
@@ -511,6 +512,7 @@
     <!-- Tailwind Config -->
     <script>
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     colors: {
