--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script>
         // Tailwind Configuration for Mobile Support
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     screens: {
@@ -982,6 +983,7 @@
     <!-- Tailwind Config -->
     <script>
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     colors: {
