--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -51,6 +51,7 @@
     <script>
         // Tailwind Configuration for Mobile Support
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     screens: {
