--- a/temario.html
+++ b/temario.html
@@ -52,6 +52,7 @@
     <script>
         // Tailwind Configuration for Mobile Support
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     screens: {
@@ -667,6 +668,7 @@
     <!-- Tailwind Config -->
     <script>
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     colors: {
