--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -654,15 +654,14 @@
                         <!-- Left Column: Photo & Titles (Aligned Top-Left) -->
                         <div class="lg:col-span-5 flex flex-col items-center text-center lg:items-start lg:text-left">
                             <!-- Photo Container -->
-                            <div class="relative w-32 h-32 md:w-40 md:h-40 mb-6 group lg:-ml-2 -mt-2">
+                            <div class="relative w-28 h-28 md:w-36 md:h-36 lg:w-44 lg:h-44 mb-6 group lg:-ml-2 -mt-2">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-tr from-primary to-accent rounded-full blur-xl opacity-30 group-hover:opacity-50 transition-opacity duration-500">
                                 </div>
                                 <div
                                     class="relative w-full h-full rounded-full border-4 border-white ring-4 ring-primary shadow-2xl overflow-hidden group-hover:scale-[1.02] transition-transform duration-500 bg-white">
-                                    <img src="./images/Captura de pantalla 2026-02-16 104349.png"
-                                        alt="Sergio Argudo Santiago"
-                                        class="w-full h-full object-contain object-bottom p-4 rounded-full">
+                                    <img src="./images/perfil.png" alt="Sergio Argudo Santiago"
+                                        class="w-full h-full object-contain object-bottom pt-2 rounded-full">
                                 </div>
                             </div>
 
